...
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name= "com.example.mlbstatsapp.HomeFragment"
        android:label="Home"
        android:windowSoftInputMode="adjustPan|adjustResize"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_homeFragment_to_playerSearchResultsFragment"
            app:destination="@id/playerSearchResultsFragment" />
        <action
            android:id="@+id/action_homeFragment_to_individualPlayer"
            app:destination="@id/individualPlayer" />
    </fragment>
    <fragment
        android:id="@+id/playerSearchResultsFragment"
        android:name="com.example.mlbstatsapp.Fragments.PlayerSearchResultsFragment"
        android:label="Player Search Results"
        tools:layout="@layout/fragment_player_search_results" >
        <action
            android:id="@+id/action_playerSearchResultsFragment_to_individualPlayer"
            app:destination="@id/individualPlayer" />
    </fragment>
    <fragment
...
