<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="playerApiModel"
            type="com.example.mlbstatsapp.PlayerApiModel"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="@drawable/red_border"
        android:layout_height="50dp">

        <TextView
            android:id="@+id/playerSearchResultsNameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@{playerApiModel.name_display_first_last}"
            android:textSize="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.466"
            tools:layout_editor_absoluteX="198dp" />
    </LinearLayout>
</layout>